2008-09-25  Michael Stucki  <michael@typo3.org>

	* Fixed bug #8195: Encoding problems with $TYPO3_CONF_VARS[SYS][sitename] - leaving the actual fix commented out as the problem should be fixed on the client side

2008-09-24 Steffen Kamper  <info@sk-typo3.de>
	* contentrss: clean up, allow usage without plugin on page with TS configuration
	* contentrss: use registered function for plugins: $GLOBALS['extConf']['contentrss']['contentRSS'][$listType]['contentPreview']
	* contentrss: working version for normal content elements with language and version overlays

2008-09-24  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: Using list query with SQL LIKE wildcards does not work
	* Fixed bug #9408: Selecting by tag using wildcards does not work with database disposal of t3lib_cache
	* Fixed bug: Problems with listQuery at single pattern matching
	* Added RSA Authentication for back-end disposal (however it still has problems with decrypting)
	* Clean up: Removed wizard data created by kickstarted from rsaauth extension
	* Clean up: Added PHPdoc comments to methods
	* Reverted changed on typo3/index.php concerning the RSA Authentication since back-end was not accessible anymore

2008-09-24  Dmitry Dulepov  <dmitry@typo3.org>

	* Added typo3/sysext/openid extension (stub generated by kickstarter)
	* Added PHP OpenID library to the openid extension
	* Moved OpenID fields to palettes under the "username" fields in fe_users/be_users
	* Added CSH for new fields
	* Added PHP OpenID library to the service code. Updated service class to match service type
	* Added code to connect to the OpenID server and request authentication
	* Fixed problem: default TYPO3 service (tx_sv_auth) prevented OpenID authentication
	* Added eID and Backend return scripts
	* Frontend user authentication is working with OpenID (tested with LiveJournal account)
	* Backend user authentication is working with OpenID (tested with LiveJournal and Yahoo accounts)
	* Added security to file-based OpenID store